--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     </main>
     <footer>
         <ul>
-            <li><a href="https://github.com/MateusAbdias"><img src="https://cdn.icon-icons.com/icons2/617/PNG/128/github_social_media_logo_icon-icons.com_56630.png"></a></li>
-            <li><a href="https://www.linkedin.com/in/mateus-abdias/"><img src="https://cdn.icon-icons.com/icons2/617/PNG/128/linkedin_social_media_logo_icon-icons.com_56644.png"></a></li>
-            <li><a href="https://www.instagram.com/maths8610/"><img src="https://cdn.icon-icons.com/icons2/617/PNG/128/instagram_social_media_logo_icon-icons.com_56667.png"></a></li>
+            <li><a href="https://github.com/MateusAbdias"><img src="https://cdn-icons-png.flaticon.com/512/1051/1051275.png"></a></li>
+            <li><a href="https://www.linkedin.com/in/mateus-abdias/"><img src="https://cdn-icons-png.flaticon.com/128/1051/1051282.png"></a></li>
+            <li><a href="https://www.instagram.com/maths8610/"><img src="https://cdn-icons-png.flaticon.com/128/1051/1051262.png"></a></li>
         </ul>
     </footer>
     <script src="./js/script.js"></script>
